vlib/v/checker/tests/invalid_generic_field_err.out
vlib/v/checker/tests/invalid_generic_field_err.vv:4:15: error: type `User` has no field named `typo`
    2 | 
    3 | fn (u &User) debug_1() {
    4 |     println('${u.typo}')
      |                  ~~~~
    5 | }
    6 | fn debug_2[T](t T) {
vlib/v/checker/tests/invalid_generic_field_err.vv:4:15: error: expression does not return a value
    2 | 
    3 | fn (u &User) debug_1() {
    4 |     println('${u.typo}')
      |                  ~~~~
    5 | }
    6 | fn debug_2[T](t T) {
vlib/v/checker/tests/invalid_generic_field_err.vv:7:9: error: `User` has no property `typo`
    5 | }
    6 | fn debug_2[T](t T) {
    7 |     _ := t.typo
      |            ~~~~
    8 | }
    9 | fn debug_3[T](t T) {
vlib/v/checker/tests/invalid_generic_field_err.vv:7:4: error: assignment mismatch: 1 variable 0 values
    5 | }
    6 | fn debug_2[T](t T) {
    7 |     _ := t.typo
      |       ~~
    8 | }
    9 | fn debug_3[T](t T) {
vlib/v/checker/tests/invalid_generic_field_err.vv:10:15: error: `User` has no property `typo`
    8 | }
    9 | fn debug_3[T](t T) {
   10 |     println('${t.typo}')
      |                  ~~~~
   11 | }
   12 |
vlib/v/checker/tests/invalid_generic_field_err.vv:10:15: error: expression does not return a value
    8 | }
    9 | fn debug_3[T](t T) {
   10 |     println('${t.typo}')
      |                  ~~~~
   11 | }
   12 |
vlib/v/checker/tests/invalid_generic_field_err.vv:10:2: error: `println` can not print void expressions
    8 | }
    9 | fn debug_3[T](t T) {
   10 |     println('${t.typo}')
      |     ~~~~~~~~~~~~~~~~~~~~
   11 | }
   12 |
